fix: Some layout warnings for view_browser_toolbar.xml

--- a/app/src/main/res/layout/view_browser_toolbar.xml
+++ b/app/src/main/res/layout/view_browser_toolbar.xml
@@ -17,7 +17,7 @@
 
         <ImageButton
             android:id="@+id/security"
-            android:layout_width="30dp"
+            android:layout_width="48dp"
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/content_description_toolbar_security" />
@@ -38,39 +38,46 @@
                 android:paddingEnd="4dp"
                 android:contentDescription="@string/content_description_toolbar_favicon"
                 android:scaleType="fitCenter" />
+
             <TextView
                 android:id="@+id/urlReadable"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_marginStart="4dp"
-                android:maxLines="1"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:hint="@string/toolbar_url_hint"
+                android:maxLines="1"
+                android:textColorHint="#4E342E"
                 android:textSize="12sp" />
+
             <EditText
                 android:id="@+id/url"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_marginStart="4dp"
-                android:maxLines="1"
-                android:gravity="center_vertical"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:importantForAutofill="no"
+                android:gravity="center_vertical"
                 android:hint="@string/toolbar_url_hint"
+                android:importantForAutofill="no"
                 android:inputType="textUri|text"
-                android:textSize="12sp"/>
+                android:maxLines="1"
+                android:textColorHint="#4E342E"
+                android:textSize="12sp"
+                tools:ignore="DuplicateSpeakableTextCheck" />
         </LinearLayout>
+
         <ImageButton
             android:id="@+id/cancel"
-            android:layout_width="30dp"
+            android:layout_width="48dp"
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/content_description_toolbar_cancel" />
+
         <ImageButton
             android:id="@+id/menu"
-            android:layout_width="30dp"
+            android:layout_width="48dp"
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/content_description_toolbar_menu" />
