--- a/app/src/main/res/layout/view_browser_toolbar.xml
+++ b/app/src/main/res/layout/view_browser_toolbar.xml
@@ -59,6 +59,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/toolbar_url_hint"
                 android:importantForAutofill="no"
+                android:imeOptions="actionGo"
                 android:inputType="textUri|text"
                 android:maxLines="1"
                 android:textColorHint="#4E342E"
