--- a/app/src/main/res/layout/view_browser_toolbar.xml
+++ b/app/src/main/res/layout/view_browser_toolbar.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    tools:parentTag="android.widget.FrameLayout">
 
     <LinearLayout
         android:id="@+id/toolbarLayout"
@@ -108,4 +107,4 @@
         android:layout_gravity="bottom"
         android:max="100" android:progress="0"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
-</FrameLayout>
+</merge>
