--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -8,8 +8,7 @@
     <ga.gianxd.browser.view.BrowserToolbarView
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:elevation="8dp" />
+        android:layout_height="50dp" />
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
